src/compiler/snapshots/isa__compiler__lexer__tests__prefix-3.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r#\"-\"string\"\"#).collect :: < Vec < _ >> ()"
---
[
    Ok(
        Spand {
            data: Operator(
                "-",
            ),
            span: SpanData { file_id: 0, start: 0, end: 1 },
        },
    ),
    Ok(
        Spand {
            data: String(
                "string",
            ),
            span: SpanData { file_id: 0, start: 1, end: 9 },
        },
    ),
]
