src/compiler/snapshots/isa__compiler__lexer__tests__prefix-6.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r#\"- - - - - - - + - + 1\"#).collect :: < Vec < _ >> ()"
---
[
    Ok(
        Spand {
            data: Operator(
                "-",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 1 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "-",
            ),
            span: SpanData { file_id: 0, lo: 2, hi: 3 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "-",
            ),
            span: SpanData { file_id: 0, lo: 4, hi: 5 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "-",
            ),
            span: SpanData { file_id: 0, lo: 6, hi: 7 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "-",
            ),
            span: SpanData { file_id: 0, lo: 8, hi: 9 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "-",
            ),
            span: SpanData { file_id: 0, lo: 10, hi: 11 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "-",
            ),
            span: SpanData { file_id: 0, lo: 12, hi: 13 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "+",
            ),
            span: SpanData { file_id: 0, lo: 14, hi: 15 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "-",
            ),
            span: SpanData { file_id: 0, lo: 16, hi: 17 },
        },
    ),
    Ok(
        Spand {
            data: Operator(
                "+",
            ),
            span: SpanData { file_id: 0, lo: 18, hi: 19 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                1,
            ),
            span: SpanData { file_id: 0, lo: 20, hi: 21 },
        },
    ),
]
