src/compiler/snapshots/isa__compiler__lexer__tests__prefix.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"-1\").collect :: < Vec < _ >> ()"
---
[
    Ok(
        Spand {
            data: Operator(
                "-",
            ),
            span: SpanData { file_id: 0, start: 0, end: 1 },
        },
    ),
    Ok(
        Spand {
            data: Integer(
                1,
            ),
            span: SpanData { file_id: 0, start: 1, end: 2 },
        },
    ),
]
