src/compiler/snapshots/isa__compiler__lexer__tests__spaced_tokens-2.snap
---
source: src/compiler/lexer.rs
expression: lexer.next()
---
Some(
    Ok(
        Spand {
            data: Operator(
                "+",
            ),
            span: SpanData { file_id: 0, start: 5, end: 6 },
        },
    ),
)
