src/compiler/snapshots/isa__compiler__lexer__tests__spaced_tokens-3.snap
---
source: src/compiler/lexer.rs
expression: lexer.next()
---
Some(
    Ok(
        Spand {
            data: Integer(
                13,
            ),
            span: SpanData { file_id: 0, lo: 71, hi: 73 },
        },
    ),
)
