src/compiler/snapshots/isa__compiler__lexer__tests__spaced_tokens.snap
---
source: src/compiler/lexer.rs
expression: lexer.next()
---
Some(
    Ok(
        Spand {
            data: Integer(
                12,
            ),
            span: SpanData { file_id: 0, lo: 2, hi: 4 },
        },
    ),
)
