src/compiler/snapshots/isa__compiler__lexer__tests__string_errors-4.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, r#\"\"ba3\\\"\n            \"\"#).next()"
---
Some(
    Err(
        Spand {
            data: UnterminatedString,
            span: SpanData { file_id: 0, start: 0, end: 6 },
        },
    ),
)
